--- a/index.html
+++ b/index.html
@@ -126,5 +126,25 @@
     </div>
 
     <script src="script.js"></script>
+    
+    <!-- Salesforce Embedded Messaging Bot Scripts -->
+    <script type='text/javascript'>
+        function initEmbeddedMessaging() {
+            try {
+                embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
+                embeddedservice_bootstrap.init(
+                    '00Dfj000008mfVq',
+                    'FAQEMB',
+                    'https://orgfarm-906e9cc810-dev-ed.develop.my.site.com/ESWFAQEMB1758702510148',
+                    {
+                        scrt2URL: 'https://orgfarm-906e9cc810-dev-ed.develop.my.salesforce-scrt.com'
+                    }
+                );
+            } catch (err) {
+                console.error('Error loading Embedded Messaging: ', err);
+            }
+        };
+    </script>
+    <script type='text/javascript' src='https://orgfarm-906e9cc810-dev-ed.develop.my.site.com/ESWFAQEMB1758702510148/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 </body>
 </html>
