--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>FAQ - Frequently Asked Questions</title>
     <link rel="stylesheet" href="styles.css">
@@ -123,5 +124,7 @@
             <p>© 2024 FAQ Demo. Built with ❤️ for the community.</p>
         </footer>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
